añadi una nueva animacion a los discos, solo a uno por ahora para probar qué tal se ve

--- a/index.html
+++ b/index.html
@@ -723,16 +723,20 @@ template {
           perferendis dignissimos reprehenderit voluptatum
         </p>
         <div class="albumes"> 
-          <a href="https://open.spotify.com/album/1El3k8dU3sKyoGUeuyrolH?si=TKbgTHcrTAWQr1iv0RB_hA" target="_blank">  
-            <div>
+
+          <a class="enlace-album" href="https://open.spotify.com/album/1El3k8dU3sKyoGUeuyrolH?si=TKbgTHcrTAWQr1iv0RB_hA" target="_blank">  
+            <div class="div-disco">
               <picture>
-                <source srcset="img/vinil7.avif" type="image/avif"/>
-                <source srcset="img/vinil7.webp" type="image/webp"/>
-                <img loading="lazy" width="660" height="1080" src="img/vinil7.png" alt="musica" />
+                <img class="portada" loading="lazy" width="660" height="1080" src="img/portada7.png" alt="musica" />
               </picture>
+              <picture>
+                <img class="disco" loading="lazy" width="600" height="1080" src="img/disco7.png" alt="disco de BREACH"/>
+              </picture>
+                
             </div>
             <p class="parrafo_seccion  parrafo_album">breach</p>
           </a>
+
           <a href="https://open.spotify.com/album/1KFWgQTw3EMTQebaaepVBI?si=S2DhrTeuRECuZxfaM-aaTg" target="_blank">  
             <div>
                <picture>
