--- a/index.html
+++ b/index.html
@@ -737,66 +737,78 @@ template {
             <p class="parrafo_seccion  parrafo_album">breach</p>
           </a>
 
-          <a href="https://open.spotify.com/album/1KFWgQTw3EMTQebaaepVBI?si=S2DhrTeuRECuZxfaM-aaTg" target="_blank">  
-            <div>
+          <a class="enlace-album" href="https://open.spotify.com/album/1KFWgQTw3EMTQebaaepVBI?si=S2DhrTeuRECuZxfaM-aaTg" target="_blank">  
+            <div class="div-disco">
                <picture>
-                <source srcset="img/vinil6.avif" type="image/avif"/>
-                <source srcset="img/vinil6.webp" type="image/webp"/>
-                <img loading="lazy" width="660" height="1080" src="img/vinil6.png" alt="musica" />
+                <img class="portada" loading="lazy" width="660" height="1080" src="img/portada6.png" alt="musica" />
+              </picture>
+               <picture>
+                <img class="disco" loading="lazy" width="660" height="1080" src="img/disco6.png" alt="musica" />
               </picture>
             </div>
             <p class="parrafo_seccion  parrafo_album">clancy</p>
           </a>
-          <a  href="https://open.spotify.com/album/0Q5XBpCYFgUWiG9DUWyAmJ?si=dSLXpPI4Qpi7FrJpNfo_nw" target="_blank">  
-            <div>
+
+          <a class="enlace-album"  href="https://open.spotify.com/album/0Q5XBpCYFgUWiG9DUWyAmJ?si=dSLXpPI4Qpi7FrJpNfo_nw" target="_blank">  
+            <div class="div-disco">
                <picture>
-                <source srcset="img/vinil5.avif" type="image/avif"/>
-                <source srcset="img/vinil5.webp" type="image/webp"/>
-                <img loading="lazy" width="660" height="1080" src="img/vinil5.png" alt="musica" />
+                <img class="portada" loading="lazy" width="660" height="1080" src="img/portada5.png" alt="musica" />
+              </picture>
+                <picture>
+                <img class="disco" loading="lazy" width="660" height="1080" src="img/disco5.png" alt="musica" />
               </picture>
             </div>
             <p class="parrafo_seccion  parrafo_album">scaled and icy</p>
           </a>
-          <a href="https://open.spotify.com/album/621cXqrTSSJi1WqDMSLmbL?si=yAR3sHTxRneij2ID6IXekQ" target="_blank">  
-            <div>
+
+          <a class="enlace-album" href="https://open.spotify.com/album/621cXqrTSSJi1WqDMSLmbL?si=yAR3sHTxRneij2ID6IXekQ" target="_blank">  
+            <div class="div-disco">
                <picture>
-                <source srcset="img/vinil4.avif" type="image/avif"/>
-                <source srcset="img/vinil4.webp" type="image/webp"/>
-                <img loading="lazy" width="660" height="1080" src="img/vinil4.png" alt="musica" />
+                <img class="portada" loading="lazy" width="660" height="1080" src="img/portada4.png" alt="musica" />
+              </picture>
+              <picture>
+                <img class="disco" loading="lazy" width="660" height="1080" src="img/disco4.png" alt="musica" />
               </picture>
             </div>
             <p class="parrafo_seccion  parrafo_album">trench</p>
           </a>
-          <a href="https://open.spotify.com/album/3cQO7jp5S9qLBoIVtbkSM1?si=1OTOzLLaQ0WouBOGCIL9IA" target="_blank">  
-            <div>
+
+          <a class="enlace-album" href="https://open.spotify.com/album/3cQO7jp5S9qLBoIVtbkSM1?si=1OTOzLLaQ0WouBOGCIL9IA" target="_blank">  
+            <div class="div-disco">
               <picture>
-                <source srcset="img/vinil3.avif" type="image/avif"/>
-                <source srcset="img/vinil3.webp" type="image/webp"/>
-                <img loading="lazy" width="660" height="1080" src="img/vinil3.png" alt="musica" />
+                <img class="portada" loading="lazy" width="660" height="1080" src="img/portada3.png" alt="musica" />
+              </picture>
+              <picture>
+                <img class="disco" loading="lazy" width="660" height="1080" src="img/disco3.png" alt="musica" />
               </picture>
             </div>
             <p class="parrafo_seccion  parrafo_album">blurryface</p>
           </a>
-          <a href="https://open.spotify.com/album/2r2r78NE05YjyHyVbVgqFn?si=y7g91JQTTtq03jDZcoQVyA" target="_blank">  
-            <div>
+
+          <a class="enlace-album" href="https://open.spotify.com/album/2r2r78NE05YjyHyVbVgqFn?si=y7g91JQTTtq03jDZcoQVyA" target="_blank">  
+            <div class="div-disco">
                <picture>
-                <source srcset="img/vinil2.avif" type="image/avif"/>
-                <source srcset="img/vinil2.webp" type="image/webp"/>
-                <img loading="lazy" width="660" height="1080" src="img/vinil2.png" alt="musica" />
+                <img class="portada" loading="lazy" width="660" height="1080" src="img/portada2.png" alt="musica" />
+              </picture>
+              <picture>
+                <img class="disco" loading="lazy" width="660" height="1080" src="img/disco2.png" alt="musica" />
               </picture>
             </div>
             <p class="parrafo_seccion  parrafo_album">Vessel</p>
           </a>
-          <a href="https://open.spotify.com/album/6rgWZP4QFBjEFF0n6JWEOa?si=D3-31U0DS1-9om0OjYfqRQ" target="_blank">  
-            <div>
-               <picture>
-                <source srcset="img/vinil1.avif" type="image/avif"/>
-                <source srcset="img/vinil1.webp" type="image/webp"/>
-                <img loading="lazy" width="660" height="1080" src="img/vinil1.png" alt="musica" />
+
+          <a class="enlace-album" href="https://open.spotify.com/album/6rgWZP4QFBjEFF0n6JWEOa?si=D3-31U0DS1-9om0OjYfqRQ" target="_blank">  
+            <div class="div-disco">
+              <picture>
+                <img class="portada" loading="lazy" width="660" height="1080" src="img/portada1.png" alt="musica" />
+              </picture>
+              <picture>
+                <img class="disco" loading="lazy" width="660" height="1080" src="img/disco1.png" alt="musica" />
               </picture>
             </div>
             <p class="parrafo_seccion parrafo_album">twenty one pilots</p>
           </a>
+
         </div>
       </section>
 
