optimice las imagenes convirtiendolas en formato .avif y .webp

--- a/index.html
+++ b/index.html
@@ -727,9 +727,13 @@ template {
           <a class="enlace-album" href="https://open.spotify.com/album/1El3k8dU3sKyoGUeuyrolH?si=TKbgTHcrTAWQr1iv0RB_hA" target="_blank">  
             <div class="div-disco">
               <picture>
+                <source srcset="img/portada7.avif" type="image/avif"/>
+                <source srcset="img/portada7.webp" type="image/webp"/>
                 <img class="portada" loading="lazy" width="1080" height="655" src="img/portada7.png" alt="musica" />
               </picture>
               <picture>
+                <source srcset="img/disco7.avif" type="image/avif"/>
+                <source srcset="img/disco7.webp" type="image/webp"/>
                 <img class="disco" loading="lazy" width="1080" height="655" src="img/disco7.png" alt="disco de BREACH"/>
               </picture>
                 
@@ -740,9 +744,13 @@ template {
           <a class="enlace-album" href="https://open.spotify.com/album/1KFWgQTw3EMTQebaaepVBI?si=S2DhrTeuRECuZxfaM-aaTg" target="_blank">  
             <div class="div-disco">
                <picture>
+                <source srcset="img/portada6.avif" type="image/avif"/>
+                <source srcset="img/portada6.webp" type="image/webp"/>
                 <img class="portada" loading="lazy" width="1080" height="655" src="img/portada6.png" alt="musica" />
               </picture>
                <picture>
+                <source srcset="img/disco6.avif" type="image/avif"/>
+                <source srcset="img/disco6.webp" type="image/webp"/>
                 <img class="disco" loading="lazy" width="1080" height="655" src="img/disco6.png" alt="musica" />
               </picture>
             </div>
@@ -752,10 +760,14 @@ template {
           <a class="enlace-album"  href="https://open.spotify.com/album/0Q5XBpCYFgUWiG9DUWyAmJ?si=dSLXpPI4Qpi7FrJpNfo_nw" target="_blank">  
             <div class="div-disco">
                <picture>
+                <source srcset="img/portada5.avif" type="image/avif"/>
+                <source srcset="img/portada5.webp" type="image/webp"/>
                 <img class="portada" loading="lazy" width="1080" height="655" src="img/portada5.png" alt="musica" />
               </picture>
                 <picture>
-                <img class="disco" loading="lazy" width="1080" height="655" src="img/disco5.png" alt="musica" />
+                  <source srcset="img/disco5.avif" type="image/avif"/>
+                  <source srcset="img/disco5.webp" type="image/webp"/>
+                  <img class="disco" loading="lazy" width="1080" height="655" src="img/disco5.png" alt="musica" />
               </picture>
             </div>
             <p class="parrafo_seccion  parrafo_album">scaled and icy</p>
@@ -764,9 +776,13 @@ template {
           <a class="enlace-album" href="https://open.spotify.com/album/621cXqrTSSJi1WqDMSLmbL?si=yAR3sHTxRneij2ID6IXekQ" target="_blank">  
             <div class="div-disco">
                <picture>
+                <source srcset="img/portada4.avif" type="image/avif"/>
+                <source srcset="img/portada4.webp" type="image/webp"/>
                 <img class="portada" loading="lazy" width="1080" height="655" src="img/portada4.png" alt="musica" />
               </picture>
               <picture>
+                <source srcset="img/disco4.avif" type="image/avif"/>
+                <source srcset="img/disco4.webp" type="image/webp"/>
                 <img class="disco" loading="lazy" width="1080" height="655" src="img/disco4.png" alt="musica" />
               </picture>
             </div>
@@ -776,9 +792,13 @@ template {
           <a class="enlace-album" href="https://open.spotify.com/album/3cQO7jp5S9qLBoIVtbkSM1?si=1OTOzLLaQ0WouBOGCIL9IA" target="_blank">  
             <div class="div-disco">
               <picture>
+                <source srcset="img/portada3.avif" type="image/avif"/>
+                <source srcset="img/portada3.webp" type="image/webp"/>
                 <img class="portada" loading="lazy" width="1080" height="655" src="img/portada3.png" alt="musica" />
               </picture>
               <picture>
+                <source srcset="img/disco3.avif" type="image/avif"/>
+                <source srcset="img/disco3.webp" type="image/webp"/>
                 <img class="disco" loading="lazy" width="1080" height="655" src="img/disco3.png" alt="musica" />
               </picture>
             </div>
@@ -788,9 +808,13 @@ template {
           <a class="enlace-album" href="https://open.spotify.com/album/2r2r78NE05YjyHyVbVgqFn?si=y7g91JQTTtq03jDZcoQVyA" target="_blank">  
             <div class="div-disco">
                <picture>
+                <source srcset="img/portada2.avif" type="image/avif"/>
+                <source srcset="img/portada2.webp" type="image/webp"/>
                 <img class="portada" loading="lazy" width="1080" height="655" src="img/portada2.png" alt="musica" />
               </picture>
               <picture>
+                <source srcset="img/disco2.avif" type="image/avif"/>
+                <source srcset="img/disco2.webp" type="image/webp"/>
                 <img class="disco" loading="lazy" width="1080" height="655" src="img/disco2.png" alt="musica" />
               </picture>
             </div>
@@ -800,9 +824,13 @@ template {
           <a class="enlace-album" href="https://open.spotify.com/album/6rgWZP4QFBjEFF0n6JWEOa?si=D3-31U0DS1-9om0OjYfqRQ" target="_blank">  
             <div class="div-disco">
               <picture>
+                <source srcset="img/portada1.avif" type="image/avif"/>
+                <source srcset="img/portada1.webp" type="image/webp"/>
                 <img class="portada" loading="lazy" width="1080" height="655" src="img/portada1.png" alt="musica" />
               </picture>
               <picture>
+                <source srcset="img/disco1.avif" type="image/avif"/>
+                <source srcset="img/disco1.webp" type="image/webp"/>
                 <img class="disco" loading="lazy" width="1080" height="655" src="img/disco1.png" alt="musica" />
               </picture>
             </div>
